<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corners_bg">

    <LinearLayout
        android:layout_width="260.5dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/statement"
            android:textColor="#000000"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@drawable/img_guide_tip_top" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/statement_info"
            android:textColor="#868C92"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/xui_icon_checkbox"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:scaleX="0.7"
                android:scaleY="0.7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/never_show"
                android:textColor="#BDBEBD" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#999999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/state_confirm"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#999999" />

            <Button
                android:id="@+id/state_cancel"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>